adding public files

--- a/public/series/index.html
+++ b/public/series/index.html
@@ -10,7 +10,7 @@
 <meta name="description" content="OwnYourGame: connecting players and coaches">
 <meta name="author" content="Nicholas Sadd">
 <link rel="canonical" href="http://blog.OwnYourGa.me/series/" />
-<link crossorigin="anonymous" href="/assets/css/stylesheet.min.775b28cbb76b9f66a8d59572eb216c6cce01c48b2da9fd0990b984380b6897bb.css" integrity="sha256-d1soy7drn2ao1ZVy6yFsbM4BxIstqf0JkLmEOAtol7s=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.min.20710639758b979de1121589095133a10387e255be6d318ca5dc1ddd9ba13e00.css" integrity="sha256-IHEGOXWLl53hEhWJCVEzoQOH4lW&#43;bTGMpdwd3ZuhPgA=" rel="preload stylesheet" as="style">
 <link rel="icon" href="http://blog.OwnYourGa.me/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="http://blog.OwnYourGa.me/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="http://blog.OwnYourGa.me/favicon-32x32.png">
